# scikit-mobility

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  LICENSE.txt  MANIFEST.in  NewYork_social_graph_final.csv  NewYork_trajectories_final.csv  README.md  diary_NewYork.pickle  example_load_datamodule.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test_mdg.ipynb  tex_NewYork_sq_300.pickle
.doctrees/: environment.pickle  index.doctree
.doctrees/reference/: collective_measures.doctree  data.doctree  data_structures.doctree  evaluation_measures.doctree  index.doctree  individual_measures.doctree  io.doctree  measures.doctree  models.doctree  preprocessing.doctree  privacy.doctree
.github/workflows/: black.yaml  build-deploy-docs.yaml  ci.yaml  codeql.yml  doc.yml  lint.yaml
_sources/: index.rst.txt
_sources/reference/: collective_measures.rst.txt  preprocessing.rst.txt  privacy.rst.txt
_static/doctrees/: index.doctree
_static/doctrees/reference/: collective_measures.doctree  evaluation_measures.doctree  index.doctree  individual_measures.doctree  measures.doctree  privacy.doctree
_static/html/: genindex.html  objects.inv  py-modindex.html
_static/html/reference/: collective_measures.html  index.html  (+6 more)
coverage/: index.html  skmob___init___py.html  skmob_core___init___py.html  skmob_core_flowdataframe_py.html  skmob_core_trajectorydataframe_py.html  skmob_data___init___py.html  skmob_data_datasets___init___py.html  skmob_data_load_py.html  skmob_io___init___py.html  skmob_io_file_py.html  skmob_measures___init___py.html  skmob_measures_collective_py.html  skmob_measures_evaluation_py.html  skmob_measures_individual_py.html  skmob_models___init___py.html  skmob_models_epr_py.html  skmob_models_geosim_py.html  skmob_models_gravity_py.html  skmob_models_markov_diary_generator_py.html  skmob_models_radiation_py.html  skmob_models_sts_epr_py.html  skmob_preprocessing___init___py.html  skmob_preprocessing_clustering_py.html  skmob_preprocessing_compression_py.html  skmob_preprocessing_detection_py.html  skmob_preprocessing_filtering_py.html  skmob_privacy___init___py.html  skmob_privacy_attacks_py.html  skmob_tessellation___init___py.html  skmob_tessellation_tilers_py.html  skmob_utils___init___py.html  skmob_utils_constants_py.html  skmob_utils_gislib_py.html  skmob_utils_plot_py.html  skmob_utils_utils_py.html  status.json
docs/: Makefile  README.md  conf.py  index.html  index.rst
docs/doctrees/: environment.pickle
docs/html/: search.html
docs/reference/: collective_measures.rst  data.rst  data_structures.rst  index.rst  individual_measures.rst  measures.rst  models.rst  preprocessing.rst  privacy.rst
docs/start/: credits.rst
examples/: NY_commuting_flows_2011.csv  NY_counties_2011.geojson  privacy_toy.csv  scikit-mobility_paper_code.ipynb
reference/: collective_measures.html  data.html  data_structures.html  evaluation_measures.html  index.html  individual_measures.html  io.html  measures.html  models.html  preprocessing.html  privacy.html  utils.html
scikit_mobility.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skmob/: __init__.py
skmob/core/: flowdataframe.py  trajectorydataframe.py
skmob/data/: Untitled.ipynb  load.py
skmob/io/: file.py
skmob/measures/: collective.py  evaluation.py  home_detection.py  individual.py
skmob/models/: __init__.py  collective.py  epr.py  geosim.py  gravity.py  markov_diary_generator.py  migration.py  radiation.py  sts_epr.py
skmob/preprocessing/: clustering.py  compression.py  detection.py  filtering.py  routing.py
skmob/privacy/: attacks.py
skmob/tessellation/: tilers.py
skmob/utils/: __init__.py  constants.py  gislib.py  plot.py  utils.py
start/: credits.html  install.html  tutorials.html
static/doctrees/: environment.pickle  index.doctree
static/html/: index.html  searchindex.js
tutorial/: 0_data_structures_skmob_tutorial.ipynb  1_preprocessing_skmob_tutorial.ipynb  2_measures_skmob_tutorial.ipynb  3_trajectory_models_skmob_tutorial.ipynb  4_flow_models_skmob_tutorial.ipynb  5_validation_skmob_tutorial.ipynb  6_privacy_skmob_tutorial.ipynb  stats_utils.py
tutorial/data/: NY_counties_2011.geojson  epr_test_spatial_tessellation  expanded_flow.csv  location2info_trentino  location2info_trentino_small
(+92 files in other folders)
