[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "skmob"
authors = [{name = "skmob Developers", email = "gianni.barlacchi@gmail.com"}]
readme = "README.md"
description = "A toolbox for analyzing and processing mobility data."
version="1.2.3"

[metadata]
dist-name = "scikit-mobility"


[project.urls]
Home = "https://scikit-mobility.github.io/scikit-mobility"
