[build-system]
requires = ["flit_core >=3.2,<4"]
build-kend = "flit_core.buildapi"

[project]
name = "skmob"
authors = [{name = "skmob Developers", email = "gianni.barlacchi@gmail.com"}]
readme="README.md"
description ="A toolbox for analyzing and processing mobility data."
version="1.2.3"
maintainers = [{name="Gianni Barlacchi", email =" gianni.barlacchi@gmail.com"}]

classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved',
    'Programming Language :: Python',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    "License :: OSI Approved :: BSD License",
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]

dependencies = [
"pandas >=1.2.5",
"python-igraph>=0.9.1",
"geopandas>=0.9.0",
"powerlaw>=1.4.6",
"tqdm>=4.60.0",
"requests>=2.25.1",
"scikit-learn>=0.24.2",
"statsmodels>=0.12.2",
"folium>=0.12.1",
"geojson>=2.5.0",
"h3>=3.7.2"
]


[project.optional-dependencies]
test = [
    "tox>=3.23.1",
    "pytest>=6.2.4",
    "coverage>=5.5",
    "pre-commit>=2.12.1",
    "poetry>=1.1.6",
    "Rtree>=0.9.7"
]
doc = ["sphinx"]

[metadata]
Documentation = "https://scikit-mobility.github.io/scikit-mobility"
dist-name = "scikit-mobility"
requires-python = ">=3.6.1"
